# into-iter-collect-optimization

./: Cargo.toml  README.md
benches/: bench.rs
