[package]
name = "into-iter-collect-optimization"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "*"
rand = "0.7"

[[bench]]
name = "bench"
harness = false

